--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.4.0",
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,6 +19,7 @@
     "@types/react": "18.2.14",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "prisma": "^4.16.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.5"
   }
