--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.4.0",
+    "dotenv": "^16.3.1",
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.3.2",
+    "@types/node": "^20.3.2",
     "@types/react": "18.2.14",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prisma": "^4.16.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.1.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.5"
   }
 }
