--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
     "@vercel/postgres": "^0.4.0",
     "dotenv": "^16.3.1",
     "next": "^13.4.7",
