--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.1",
+    "@prisma/client": "4.16.1",
     "@vercel/postgres": "^0.4.0",
+    "baseui": "^13.0.0",
     "dotenv": "^16.3.1",
     "next": "^13.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.2",
     "@types/react": "18.2.14",
     "autoprefixer": "^10.4.14",
+    "eslint-plugin-baseui": "^13.0.0",
     "postcss": "^8.4.24",
-    "prisma": "^4.16.1",
+    "prisma": "4.16.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.5"
