--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+HELLOMOON_BEARER_TOKEN="7216febd-67cc-40df-a1e5-f47dfd0765db"
+HELIUS_API_KEY="ea79ffc7-09ca-42ed-b671-0c643abb077a"
