--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,23 @@
 
 {
-  "extends": "next/core-web-vitals",
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "plugins": [
-    "baseui"
+    "baseui",
+    "react",
+    "@typescript-eslint"
   ],
   "rules": {
     "baseui/deprecated-theme-api": "warn",
